testsuite/tests/parser/should_fail/NoBlockArgumentsFail2.stderr

NoBlockArgumentsFail2.hs:6:22: error:
    Unexpected lambda expression in function application:
        \ x -> print x
    Suggested fixes:
      You could write it with parentheses
      Perhaps you intended to use BlockArguments
